fix old value wrap

--- a/app/src/features/sessionBook/components/SessionViewerBottomSheet/components/SessionStorageLogs/sessionStorageLogs.scss
+++ b/app/src/features/sessionBook/components/SessionViewerBottomSheet/components/SessionStorageLogs/sessionStorageLogs.scss
@@ -27,6 +27,7 @@
       height: calc(100% - 30px);
     }
   }
+
   th.ant-table-cell {
     background: var(--requestly-color-surface-2);
     padding: 4px 8px;
@@ -76,5 +77,12 @@
         display: block;
       }
     }
+  }
+
+  .old-value-cell {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
   }
 }
